# awsmock-qt-ui

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CMakeLists.txt  GitVersion.yml  README.md  appicon.rc  awsmock-qt-ui  awsmock-qt-ui.pro
.github/pages/: index.html
.github/workflows/: build-linux.yml  build-release.yml  build-windows.yml  release-please.yml
cmake/: ReadVersion.cmake  UpdateReleaseDate.cmake  UpdateXmlVersion.cmake  version.h.in
include/: Version.h  Version.h.in  mainwindow.h
include/dto/application/: Application.h  ApplicationCounter.h  ApplicationCreateRequest.h  ApplicationGetResponse.h  ApplicationListResponse.h  ApplicationUpdateRequest.h  ApplicationUploadRequest.h
include/dto/dashboard/: DashboardCounterResult.h
include/dto/gateway/: GatewayConfig.h
include/dto/lambda/: LambdaCounter.h  LambdaGetResponse.h  LambdaInstanceCounter.h  LambdaListEnvironmentResponse.h  LambdaListInstancesResponse.h  LambdaListResponse.h  LambdaListResultsResponse.h  LambdaResultCounter.h
include/dto/s3/: S3BucketCounter.h  S3GetBucketDetailsResponse.h  S3GetObjectDetailsResponse.h  S3ListBucketResult.h  S3ListObjectResponse.h  S3ObjectCounter.h
include/dto/sns/: SNSGetMessageDetailsResponse.h  SNSGetTopicDetailsResponse.h  SNSListMessagesResult.h  SNSListTopicResult.h  SNSMessageCounter.h  SNSMessageList.h  SNSTopicCounter.h
include/dto/sqs/: SQSGetMessageDetailsResponse.h  SQSGetQueueDetailsResponse.h  SQSListMessagesResponse.h  SQSListQueueAttributesResponse.h  SQSListQueueDefaultAttribtesResponse.h  SQSListQueueLambdaTriggersResponse.h  SQSListQueueResponse.h  SQSMessageAttribute.h  SQSMessageAttributeDataType.h  SQSMessageCounter.h  SQSQueueAttributeCounter.h  SQSQueueCounter.h  SQSQueueLambdaTriggerCounter.h  SQSQueueUpdateRequest.h  SQSSendMessageRequest.h  SQSSendMessageResponse.h  UpdateQueueRequest.h
include/modules/application/: ApplicationAddDialog.h  ApplicationDependencyDialog.h  ApplicationEditDialog.h  ApplicationEnvironmentEditDialog.h  ApplicationList.h  ApplicationLogsDialog.h  ApplicationReloadDialog.h  ApplicationService.h  ApplicationTagDialog.h  ApplicationUploadCodeDialog.h  UploadApplicationCodeDialog.h
include/modules/dashboard/: ChartConfig.h  CrossHairChartView.h  Dashboard.h  DashboardService.h
include/modules/docker/: DockerLogClient.h
include/modules/ftp/: FTPClient.h  FTPUploadDialog.h
include/modules/infrastructure/: InfrastructureService.h
include/modules/lambda/: LambdaDetailsDialog.h  LambdaEnvironmentAddDialog.h  LambdaEnvironmentDetailDialog.h  LambdaList.h  LambdaLogsDialog.h  LambdaResultListDialog.h  LambdaService.h
include/modules/s3/: S3BucketEditDialog.h  S3BucketList.h  S3ObjectEditDialog.h  S3ObjectList.h  S3ObjectMetadataDetailsDialog.h  S3Service.h
include/modules/sns/: SNSMessageDetailsDialog.h  SNSMessageList.h  SNSService.h  SNSTopicDetailsDialog.h  SNSTopicList.h
include/modules/sqs/: SQSMessageAddDialog.h  SQSMessageDetailsDialog.h  SQSMessageList.h  SQSQueueDetailsDialog.h  SQSQueueList.h  SQSService.h
include/utils/: About.h  BaseDialog.h  BasePage.h  BaseService.h  Configuration.h  DropField.h  EditConfigDialog.h  EditPreferencesDialog.h  EventBus.h  FileUtils.h  IconUtils.h  JsonUtils.h  NonEmptyValidator.h  RestManager.h  ScopedTimer.h  TableUtils.h  WordHIghLighter.h
installer/config/: config.xml
resources/: awsmock-qt-ui.qrc  awsmock-qt-ui.qrc.depends
resources/styles/: dark.qss
src/: main.cpp  mainwindow.cpp
src/modules/application/: ApplicationAddDialog.cpp  ApplicationDependencyDialog.cpp  ApplicationDependencyDialog.ui  ApplicationEditDialog.cpp  ApplicationEditDialog.ui  ApplicationEnvironmentEditDialog.cpp  ApplicationEnvironmentEditDialog.ui  ApplicationList.cpp  ApplicationLogsDialog.cpp  ApplicationLogsDialog.ui  ApplicationReloadDialog.cpp  ApplicationService.cpp  ApplicationTagDialog.cpp  ApplicationTagDialog.ui  ApplicationUploadCodeDialog.cpp  ApplicationUploadCodeDialog.ui  UploadApplicationCodeDialog.cpp  UploadApplicationCodeDialog.ui
src/modules/dashboard/: Dashboard.cpp  Dashboard.ui  DashboardService.cpp
src/modules/docker/: DockerLogClient.cpp
src/modules/ftp/: CurlHandle.cpp  FTPClient.cpp  FTPUploadDialog.cpp  FTPUploadDialog.ui
src/modules/infrastructure/: InfrastructureService.cpp
src/modules/lambda/: LambdaDetailsDialog.cpp  LambdaDetailsDialog.ui  LambdaEnvironmentAddDialog.cpp  LambdaEnvironmentAddDialog.ui  LambdaEnvironmentDetailDialog.cpp  LambdaEnvironmentDetailDialog.ui  LambdaList.cpp  LambdaLogsDialog.cpp  LambdaLogsDialog.ui  LambdaResultListDialog.cpp  LambdaResultListDialog.ui  LambdaService.cpp
src/modules/s3/: S3BucketEditDialog.cpp  S3BucketEditDialog.ui  S3BucketList.cpp  S3ObjectEditDialog.cpp  S3ObjectEditDialog.ui  S3ObjectList.cpp  S3ObjectMetadataDetailsDialog.cpp  S3ObjectMetadataDetailsDialog.ui  S3Service.cpp
src/modules/sns/: CMakeLists.txt  SNSMessageDetailsDialog.cpp  SNSMessageDetailsDialog.ui  SNSMessageList.cpp  SNSService.cpp  SNSTopicDetailsDialog.cpp  SNSTopicDetailsDialog.ui  SNSTopicList.cpp
src/modules/sqs/: SQSMessageAddDialog.cpp  SQSMessageAddDialog.ui  SQSMessageDetailsDialog.cpp  SQSMessageDetailsDialog.ui  SQSMessageList.cpp  SQSQueueDetailsDialog.cpp  SQSQueueDetailsDialog.ui  SQSQueueList.cpp  SQSService.cpp
src/utils/: About.cpp  About.ui  BaseDialog.cpp  BasePage.cpp  CMakeLists.txt  Configuration.cpp  EditConfigDialog.cpp  EditConfigDialog.ui  EditPreferencesDialog.cpp  IconUtils.cpp  RestManager.cpp  TableUtils.cpp
